# claude-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/superpowers/specs/: 2026-04-10-incident-response-agent-design.md
k8s/: deployment.yaml  service.yaml
src/incident_agent/: agent.py  alerts.py  config.py  escalation.py  main.py
src/incident_agent/tools/: registry.py  remediation.py
tests/: conftest.py  test_agent.py  test_alerts.py  test_escalation.py  test_integration.py  test_main.py  test_remediation.py
